--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -7,13 +7,15 @@ header.masthead {
     padding-bottom: 100px;
 
     color: white;
-    background: url('../img/bg-pattern.png'), $theme-secondary;
-    background: url('../img/bg-pattern.png'), -webkit-linear-gradient(to left, $theme-secondary, $theme-tertiary);
-    background: url('../img/bg-pattern.png'), linear-gradient(to left, $theme-secondary, $theme-tertiary);
+    background: url("../img/bg-video/bg-video.jpg"), no-repeat;
+    background-repeat: no-repeat;
+    background-size: cover;
     .header-content {
+        margin-top: 30%;
         max-width: 500px;
         margin-bottom: 100px;
-
+        margin-left: auto;
+        margin-right: auto;
         text-align: center;
         h1 {
             font-size: 30px;
@@ -27,6 +29,11 @@ header.masthead {
             border-radius: 3px;
         }
     }
+
+    .play-wrapper {
+      margin-top: 50px;
+    }
+
     @media (min-width: 992px) {
         height: 100vh;
         min-height: 775px;
