--- a/scss/_nxt.scss
+++ b/scss/_nxt.scss
@@ -154,9 +154,85 @@
 
 	.multi-store-content {
 		display: none;
+		.multi-store-container {
+		  width: 40em;
+		  height: 25em;
+		  margin: 0 auto;
+		  position: relative;
+		}
 
-		.multi-store-image {
-			width: 500px;
+		li {
+		  width: 500px;
+		  height: 281px;
+		  background: #333;
+		  display: inline-block;
+		  -webkit-transition: all .3s ease-in-out;
+		  -moz-transition: all .3s ease-in-out;
+		  transition: all .3s ease-in-out;
+		  overflow: hidden;
+		}
+
+		li p {
+		  color: white;
+		  font-weight: bold;
+		  font-size: 5em;
+		  text-align: center;
+		  margin-top: 1.175em;
+		}
+
+		.items {
+		  position: absolute;
+		}
+
+		.main-pos {
+		  margin-left: 2% !important;
+		  z-index: 3000;
+		  /*background-image: url('https://dl.dropbox.com/u/32649907/imgs/shadow.png');*/
+		}
+
+		.left-pos {
+		  opacity: .3;
+		  margin-left: -40% !important;
+		  z-index: 1000;
+		  -webkit-transform: scale(.75);
+		  -moz-transform: scale(.75);
+		  transform: scale(.75);
+		  @media (max-width: 700px) {
+				margin-left: -20% !important;
+			}
+		  @media (max-width: 600px) {
+				display: none;
+			}
+		}
+
+		.back-pos {
+		  margin-left: 2em !important;
+		  opacity: .05;
+		  -webkit-transform: scale(.5);
+		  -moz-transform: scale(.5);
+		  transform: scale(.5);
+		}
+
+		.right-pos {
+		  opacity: .3;
+		  margin-left:  45% !important;
+		  z-index: 1000;
+		  -webkit-transform: scale(.75);
+		  -moz-transform: scale(.75);
+		  transform: scale(.75);
+		  @media (max-width: 700px) {
+		  	margin-left:  24% !important;
+			}
+		  @media (max-width: 600px) {
+				display: none;
+			}
+		}
+
+		span {
+		  position: relative;
+		  margin: 0 auto;
+		  left: 17em;
+		  top: 20em;
 		}
 	}
 
