--- a/css/nxt-site.css
+++ b/css/nxt-site.css
@@ -42,9 +42,61 @@ h6 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   margin-bottom: 0 !important;
+}
+
+.text-xs {
+  font-size: 16px;
+}
+
+.text-sm {
+  font-size: 20px;
+}
+
+.text-md {
+  font-size: 32px;
+}
+
+.text-lg {
+  font-size: 40px;
+}
+
+.text-xl {
+  font-size: 50px;
+}
+
+.bold {
+  font-weight: 500;
+}
+
+.blue {
+  color: #3898ec;
+}
+
+.white {
+  color: #ffffff;
+}
+
+.grey {
+  color: #6a7889;
+}
+
+.mt-50 {
+  margin-top: 50px;
+}
+
+.mb-50 {
+  margin-bottom: 50px;
+}
+
+.mt-100 {
+  margin-top: 100px;
+}
+
+.mb-100 {
+  margin-bottom: 100px;
 }
 
 section {
@@ -84,7 +136,7 @@ section h2 {
 }
 
 #mainNav .navbar-nav > li > a {
-  font-size: 11px;
+  font-size: 16px;
   font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -160,7 +212,7 @@ header.masthead {
 }
 
 header.masthead .header-content {
-  margin-top: 30%;
+  margin-top: 35%;
   max-width: 500px;
   margin-bottom: 100px;
   margin-left: auto;
@@ -194,7 +246,6 @@ header.masthead .play-wrapper {
     padding-bottom: 0;
   }
   header.masthead .header-content {
-    margin-bottom: 0;
     text-align: left;
   }
   header.masthead .header-content h1 {
@@ -233,7 +284,7 @@ footer .footer-left-container .footer-item-container .footer-item {
 }
 
 .mail {
-  background: linear-gradient(to top, #e9f5ff, #ffffff), linear-gradient(#3898ec, #3898ec);
+  background: linear-gradient(187deg, #e1f5ff, #f5faff 48%, #69b9ff);
 }
 
 .mail .oval-3 {
@@ -249,14 +300,12 @@ footer .footer-left-container .footer-item-container .footer-item {
 .mail .benefit-title {
   letter-spacing: normal;
   text-align: center;
-  color: #333333;
   margin: 0;
 }
 
 .mail .benefit-description {
   letter-spacing: normal;
   text-align: center;
-  color: #6a7889;
   margin: 0;
 }
 
@@ -274,7 +323,6 @@ footer .footer-left-container .footer-item-container .footer-item {
 .service .service-desc {
   margin-top: 20%;
   padding: 30px;
-  color: grey;
 }
 
 .service .service-title-wrapper {
@@ -284,44 +332,30 @@ footer .footer-left-container .footer-item-container .footer-item {
 }
 
 .service .service-title-wrapper .service-title {
-  font-size: 40px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  font-weight: bold;
-  line-height: 1.12;
-  letter-spacing: normal;
   text-align: center;
-  color: #333333;
   margin: auto;
   margin-bottom: 20px;
 }
 
 .service .service-title-wrapper .service-text {
-  font-size: 16px;
-  font-weight: normal;
   font-style: normal;
   font-stretch: normal;
   line-height: 1.5;
   letter-spacing: normal;
   text-align: center;
-  color: #6a7889;
   margin: auto;
 }
 
 .reservation {
-  background: linear-gradient(to top, #e9f5ff, #ffffff), linear-gradient(#3898ec, #3898ec);
-}
-
-.reservation .container-fluid {
-  padding-left: 0;
-  padding-right: 0;
+  background: url(../img/bg-reservation/bg-reservation.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
 }
 
 .reservation .reservation-desc {
   margin-top: 20%;
   padding: 30px;
-  color: grey;
 }
 
 .reservation .reservation-bottom-desc {
@@ -336,28 +370,13 @@ footer .footer-left-container .footer-item-container .footer-item {
 }
 
 .reservation .reservation-title-wrapper .reservation-title {
-  font-size: 40px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  font-weight: bold;
-  line-height: 1.12;
-  letter-spacing: normal;
   text-align: center;
-  color: #333333;
   margin: auto;
   margin-bottom: 20px;
 }
 
 .reservation .reservation-title-wrapper .reservation-text {
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
   text-align: center;
-  color: #6a7889;
   margin: auto;
 }
 
@@ -368,13 +387,21 @@ footer .footer-left-container .footer-item-container .footer-item {
   width: 70%;
 }
 
-.features-chain-store .bg-run-business {
-  width: 100%;
+.features-chain-store {
+  background: url(../img/bg-run-business/bg-run-business.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  margin-top: 100px;
 }
 
 .features-chain-store .container-fluid {
   padding-left: 0;
-  padding-right: 0;
+  margin-left: 0;
+}
+
+.features-chain-store .bg-run-business {
+  width: 100%;
 }
 
 .features-chain-store .multi-store-content {
@@ -382,15 +409,20 @@ footer .footer-left-container .footer-item-container .footer-item {
 }
 
 .features-chain-store .multi-store-content .multi-store-container {
-  width: 40em;
+  width: 640px;
   height: 25em;
   margin: 0 auto;
   position: relative;
 }
 
+@media (max-width: 600px) {
+  .features-chain-store .multi-store-content .multi-store-container {
+    width: 400px;
+  }
+}
+
 .features-chain-store .multi-store-content li {
   width: 500px;
-  height: 281px;
   background: #333;
   display: inline-block;
   -webkit-transition: all .3s ease-in-out;
@@ -399,10 +431,18 @@ footer .footer-left-container .footer-item-container .footer-item {
   overflow: hidden;
 }
 
+.features-chain-store .multi-store-content li img {
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .features-chain-store .multi-store-content li {
+    width: 300px;
+  }
+}
+
 .features-chain-store .multi-store-content li p {
   color: white;
-  font-weight: bold;
-  font-size: 5em;
   text-align: center;
   margin-top: 1.175em;
 }
@@ -475,14 +515,7 @@ footer .footer-left-container .footer-item-container .footer-item {
 }
 
 .features-chain-store .single-store-content .single-store-image {
-  width: 100%;
-}
-
-.features-chain-store .single-store-content .single-store-info-list {
-  margin-top: 20px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  width: 90%;
 }
 
 .features-chain-store .single-store-content .single-store-info-list .single-store-icon {
@@ -492,37 +525,13 @@ footer .footer-left-container .footer-item-container .footer-item {
   background-image: linear-gradient(to bottom, #69c9f7, #3898ec);
   margin: 0;
   padding: 12px;
+  display: inline-block;
 }
 
-.features-chain-store .single-store-content .single-store-info-list .word-title {
-  width: 320px;
-  font-size: 20px;
-  font-weight: 600;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #022236;
-  margin: 0;
-  margin-top: 10px;
-}
-
-.features-chain-store .single-store-content .single-store-info-list .word-emphasized {
-  font-size: 32px;
-  color: #3898ec;
-}
-
-.features-chain-store .single-store-content .single-store-info-list .word-description {
-  width: 320px;
-  font-size: 16px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.5;
-  letter-spacing: normal;
-  color: #6a7889;
-  margin: 0;
-  padding: 0;
+.features-chain-store .single-store-content .single-store-info-list .single-store-desc {
+  display: inline-block;
+  width: 65%;
+  vertical-align: top;
 }
 
 .features-chain-store .chain-store-image-wrapper {
