--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -11,7 +11,7 @@ header.masthead {
     background-repeat: no-repeat;
     background-size: cover;
     .header-content {
-        margin-top: 35%;
+        margin-top: 40%;
         max-width: 500px;
         margin-bottom: 100px;
         margin-left: auto;
@@ -19,6 +19,9 @@ header.masthead {
         text-align: center;
         h1 {
             font-size: 30px;
+        }
+        @media (max-width: 992px) {
+            margin-top: 10%;
         }
     }
     .device-container {
