--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,10 +1,31 @@
 // Styling for the navbar
 #mainNav {
+    z-index: 10000;
     border-color: fade-out($gray-darker, .95);
     background-color: white;
     @include transition-all;
     @include heading-font;
     .navbar-brand {
+        .logo-white-image {
+            display: inline;
+            width: 50px;
+            @media (max-width: 992px) {
+                display: none;
+            }
+        }
+        .logo-black-image {
+            display: none;
+            width: 50px;
+            @media (max-width: 992px) {
+                display: inline;
+            }
+        }
+        .logo-text {
+            @media (max-width: 992px) {
+                color: black;
+            }
+            color: white;
+        }
         color: $theme-primary;
         @include heading-font;
         &:hover,
@@ -57,6 +78,15 @@
             }
         }
         &.navbar-shrink {
+            .logo-text {
+                color: black;
+            }
+            .logo-white-image {
+                display: none;
+            }
+            .logo-black-image {
+                display: inline;
+            }
             border-color: fade-out($gray-darker, .9);
             background-color: white;
             .navbar-brand {
